# wasm-face-tracking

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  detect_face_wasm.cpp  detect_face_wasm.js  detect_face_wasm.wasm  emsdk_set_env.sh  face-tracker-lib.js  face-tracker.js  face-tracker.worker.js  faceDetector.js  faceTracker.js  grayscale.js  index.html  index.js  main.js  package-lock.json  package.json  script.js  webpack.config.js
dlib/gui_core/: gui_core_kernel_1.h  gui_core_kernel_2.h
dlib/image_processing/: frontal_face_detector.h  frontal_face_detector_abstract.h
emscripten/: face_tracker_wasm.cpp
examples/: CMakeLists.txt
js/: arena.js  face-tracker.worker.js  face_tracker_wasm.js  index.js  script.js
src/: detect_face_wasm.cpp  face-tracker-module.js  face-tracker-source.js  face-tracker.js  face-tracker.worker.js  face_tracker_wasm.js  face_tracker_wasm.wasm  grayscale.js  index.js  preprocessor.js  utils.js
src/shaders/: flip-image.glsl  grayscale.glsl
src/utils/: gl-utils.js
